--- a/CLIENT/RESTSIQS/res/values/strings.xml
+++ b/CLIENT/RESTSIQS/res/values/strings.xml
@@ -1,4 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RESTSIQS</string>
+    <string name="app_name">学生信息查询系统</string>
+    <string name="btn_notice">公告</string>
+    <string name="btn_course">课程</string>
+    <string name="btn_TE">考试</string>
+    <style name="bottom_tabs_ll" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="bottom_tabs_image" >
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">5dip</item>
+    </style>
+
+    <style name="bottom_tabs_tv" >
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:paddingTop">3dip</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
